Test/dafny0/AsIs-Resolve.dfy.expect
AsIs-Resolve.dfy(23,15): Error: RHS (of type M<V>) not assignable to LHS (of type int)
AsIs-Resolve.dfy(24,18): Error: RHS (of type M<V>) not assignable to LHS (of type Opaque)
AsIs-Resolve.dfy(25,19): Error: RHS (of type M<V>) not assignable to LHS (of type ValSyn)
AsIs-Resolve.dfy(26,6): Error: RHS (of type M?<V>) not assignable to LHS (of type int)
AsIs-Resolve.dfy(27,6): Error: RHS (of type M?<V>) not assignable to LHS (of type Opaque)
AsIs-Resolve.dfy(28,7): Error: RHS (of type M?<V>) not assignable to LHS (of type ValSyn)
AsIs-Resolve.dfy(33,15): Error: type conversions are not supported to this type (got Opaque)
AsIs-Resolve.dfy(36,12): Error: type conversions are not supported to this type (got Opaque)
AsIs-Resolve.dfy(32,15): Error: type conversion to an int-based type is allowed only from numeric and bitvector types, char, and ORDINAL (got M<_T0>)
AsIs-Resolve.dfy(34,16): Error: type conversion to an ORDINAL type is allowed only from numeric and bitvector types, char, and ORDINAL (got M<_T0>)
AsIs-Resolve.dfy(35,12): Error: type conversion to an int-based type is allowed only from numeric and bitvector types, char, and ORDINAL (got M?<_T0>)
AsIs-Resolve.dfy(37,13): Error: type conversion to an ORDINAL type is allowed only from numeric and bitvector types, char, and ORDINAL (got M?<_T0>)
AsIs-Resolve.dfy(52,19): Error: RHS (of type M<V>) not assignable to LHS (of type RefSyn)
AsIs-Resolve.dfy(61,7): Error: RHS (of type M?<V>) not assignable to LHS (of type RefSyn)
AsIs-Resolve.dfy(70,21): Error: RHS (of type M<V>) not assignable to LHS (of type RefSyn?)
AsIs-Resolve.dfy(79,8): Error: RHS (of type M?<V>) not assignable to LHS (of type RefSyn?)
AsIs-Resolve.dfy(49,13): Error: RHS (of type M<V>) not assignable to LHS (of type K<?>)
AsIs-Resolve.dfy(50,13): Error: RHS (of type M<V>) not assignable to LHS (of type L<?>)
AsIs-Resolve.dfy(58,6): Error: RHS (of type M?<V>) not assignable to LHS (of type K<?>)
AsIs-Resolve.dfy(59,6): Error: RHS (of type M?<V>) not assignable to LHS (of type L<?>)
AsIs-Resolve.dfy(67,15): Error: RHS (of type M<V>) not assignable to LHS (of type K?<?>)
AsIs-Resolve.dfy(68,15): Error: RHS (of type M<V>) not assignable to LHS (of type L?<?>)
AsIs-Resolve.dfy(76,7): Error: RHS (of type M?<V>) not assignable to LHS (of type K?<?>)
AsIs-Resolve.dfy(77,7): Error: RHS (of type M?<V>) not assignable to LHS (of type L?<?>)
AsIs-Resolve.dfy(94,16): Error: type cast to reference type 'RefSyn' must be from an expression assignable to it (got 'M<V>')
AsIs-Resolve.dfy(103,13): Error: type cast to reference type 'RefSyn' must be from an expression assignable to it (got 'M?<V>')
AsIs-Resolve.dfy(91,15): Error: type cast to reference type 'K<?>' must be from an expression assignable to it (got 'M<V>')
AsIs-Resolve.dfy(92,15): Error: type cast to reference type 'L<?>' must be from an expression assignable to it (got 'M<V>')
AsIs-Resolve.dfy(100,12): Error: type cast to reference type 'K<?>' must be from an expression assignable to it (got 'M?<V>')
AsIs-Resolve.dfy(101,12): Error: type cast to reference type 'L<?>' must be from an expression assignable to it (got 'M?<V>')
AsIs-Resolve.dfy(109,16): Error: type cast to reference type 'K?<?>' must be from an expression assignable to it (got 'M<V>')
AsIs-Resolve.dfy(110,16): Error: type cast to reference type 'L?<?>' must be from an expression assignable to it (got 'M<V>')
AsIs-Resolve.dfy(117,13): Error: type cast to reference type 'K?<?>' must be from an expression assignable to it (got 'M?<V>')
AsIs-Resolve.dfy(118,13): Error: type cast to reference type 'L?<?>' must be from an expression assignable to it (got 'M?<V>')
AsIs-Resolve.dfy(128,11): Error: type cast to reference type 'M<V>' must be from an expression assignable to it (got 'K<V>')
AsIs-Resolve.dfy(129,11): Error: type cast to reference type 'M<V>' must be from an expression assignable to it (got 'L<V>')
AsIs-Resolve.dfy(130,12): Error: type cast to reference type 'M<V>' must be from an expression assignable to it (got 'RefSyn')
AsIs-Resolve.dfy(137,12): Error: type cast to reference type 'M?<V>' must be from an expression assignable to it (got 'K<V>')
AsIs-Resolve.dfy(138,12): Error: type cast to reference type 'M?<V>' must be from an expression assignable to it (got 'L<V>')
AsIs-Resolve.dfy(139,13): Error: type cast to reference type 'M?<V>' must be from an expression assignable to it (got 'RefSyn')
AsIs-Resolve.dfy(148,12): Error: type cast to reference type 'M<V>' must be from an expression assignable to it (got 'K?<V>')
AsIs-Resolve.dfy(149,12): Error: type cast to reference type 'M<V>' must be from an expression assignable to it (got 'L?<V>')
AsIs-Resolve.dfy(150,13): Error: type cast to reference type 'M<V>' must be from an expression assignable to it (got 'RefSyn?')
AsIs-Resolve.dfy(157,13): Error: type cast to reference type 'M?<V>' must be from an expression assignable to it (got 'K?<V>')
AsIs-Resolve.dfy(158,13): Error: type cast to reference type 'M?<V>' must be from an expression assignable to it (got 'L?<V>')
AsIs-Resolve.dfy(159,14): Error: type cast to reference type 'M?<V>' must be from an expression assignable to it (got 'RefSyn?')
46 resolution/type errors detected in AsIs-Resolve.dfy
